# pychatai-chat

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  rxconfig.py
assets/: growing.js  scroll.js  styles.css
pychatai/: reflex_gptp.py  styles.py  utils.py
pychatai/components/: chat.py  input.py  nav.py  side.py
